update display of user table

--- a/app/views/dm_core/admin/users/index.html.erb
+++ b/app/views/dm_core/admin/users/index.html.erb
@@ -9,7 +9,7 @@
           <th>Last Name</th>
           <th>Email</th>
           <th>Country</th>
-          <th>Last Sign In</th>
+          <th>Last Access</th>
           <th>Role</th>
           <th width="75">Actions</th>
         </tr>
