--- a/app/views/layouts/admin/_page_main_nav.html.erb
+++ b/app/views/layouts/admin/_page_main_nav.html.erb
@@ -1,33 +1,30 @@
-<div class="mainNav">
-  <div class="user">
-    <a title="" class="leftUserDrop"><img src="/admin/images/user_anon.png" alt="" /></a>
-    <ul class="leftUser">
-      <li><%= link_to("Logout", destroy_user_session_path, {:method => :delete, :class => 'sLogout'}) %></li>
+<!-- Top nav -->
+<div id="top">
+  <div class="top-wrapper">
+    <%= link_to image_tag(admin_theme_path + "_custom/logo.png"), index_url, :class => 'logo'  %>
+
+    <ul class="topnav">
+      <li class="topuser">
+        <a title="" data-toggle="dropdown"><img src="<%= @admin_theme %>images/user_anon.png" alt="" /><span><%= current_user.display_name %></span><i class="caret"></i></a>
+        <ul class="dropdown-menu">
+          <li><a href="#" title=""><span class="user-profile"></span>My profile</a></li>
+          <li><%= link_to('<span class="user-settings"></span>Dark theme</a>'.html_safe, dm_core.admin_change_theme_path(:id => 'dark') ) %></li>
+          <li><%= link_to('<span class="user-settings"></span>Teal theme</a>'.html_safe, dm_core.admin_change_theme_path( :id => 'teal')) %></li>
+          <li><%= link_to('<span class="user-logout"></span>Logout</a>'.html_safe, destroy_user_session_path, {:method => :delete}) %></li>
+        </ul>
+      </li>
+      <li class="sidebar-button"><a href="#" title=""><b class="responsive-nav"></b></a></li>
+      <li><%= link_to('<b class="logout"></b>'.html_safe, destroy_user_session_path, {:method => :delete}) %></li>
     </ul>
   </div>
-    
-  <!-- Responsive nav -->
-  <div class="altNav">
-    <div class="userSearch">
-      <form action="">
-        <input type="text" placeholder="search..." name="userSearch" />
-        <input type="submit" value="" />
-      </form>
-    </div>
-      
-    <!-- User nav -->
-    <ul class="userNav">
-      <li><a href="#" title="" class="profile"></a></li>
-      <li><a href="#" title="" class="messages"></a></li>
-      <li><a href="#" title="" class="settings"></a></li>
-      <li><a href="#" title="" class="logout"></a></li>
+</div>
+<!-- /top nav -->
+
+<div class="navbar">
+  <div class="navbar-inner">
+    <ul class="nav pull-right">
+      <li><%= link_to "#{icons("font-dashboard", :size => 24)}<span>Dashboard</span>".html_safe, dm_core.admin_dashboard_path %></li>
+      <li><%= link_to "#{icons("font-users", :size => 24)}<span>Users</span>".html_safe, dm_core.admin_users_path %></li>
     </ul>
   </div>
-    
-  <!-- Main nav -->
-  <ul class="nav">
-    <li><%= link_to "#{iconb(:dashboard, :size => 24)}<span>Dashboard</span>".html_safe, admin_dashboard_path %></li>
-    <li><%= link_to "#{iconb(:lexicon, :size => 24)}<span>Categories</span>".html_safe, admin_categories_path %></li>
-    <li><%= link_to "#{iconb(:users, :size => 24)}<span>Users</span>".html_safe, admin_users_path %></li>
-  </ul>
 </div>
