--- a/core/app/views/layouts/admin/admin_page.html.erb
+++ b/core/app/views/layouts/admin/admin_page.html.erb
@@ -1,72 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <%= render :partial => "layouts/admin/page_header" %>
 
-<%= render :partial => "layouts/admin/page_top_line" %>
+<body id="<%= admin_theme_id %>">
 
-<!-- Sidebar begins -->
-<div id="sidebar">
   <%= render :partial => "layouts/admin/page_main_nav" %>
-  <%= render :partial => "layouts/admin/page_sec_nav" %>
-</div>
-<!-- Sidebar ends -->
 
+  <!-- Main wrapper -->
+  <div class="wrapper <%= content_for(:sidebar_right).blank? ? 'two-columns' : 'three-colums' %>">
 
-<!-- Content begins -->
-<div id="content">
-  <div class="contentTop">
-    <span class="pageTitle"><%= content_for :content_title %></span>
-    <ul class="quickStats">
-      <li>
-        <%= link_to image_tag("/admin/images/icons/quickstats/plus.png"), "", :class => 'blueImg' %>
-        <div class="floatR"><strong class="blue">n/a</strong><span>subscribers</span></div>
-      </li>
-      <li>
-        <%= link_to image_tag("/admin/images/icons/quickstats/money.png"), "", :class => 'greenImg' %>
-        <div class="floatR"><strong class="blue">n/a</strong><span>contributions</span></div>
-      </li>
-      <li>
-        <%= link_to image_tag("/admin/images/icons/quickstats/user.png"), dm_core.admin_users_path, :class => 'redImg' %>
-        <div class="floatR"><strong class="blue"><%= User.count %></strong><span>users</span></div>
-      </li>
-    </ul>
-    <div class="clear"></div>
-    <div class="clear"></div>
-  </div>
-    
-  <!-- Breadcrumbs line -->
-  <div class="breadLine">      
-    <div class="breadLinks">
-      <ul>
-        <li><a href="#" title=""><i class="icos-list"></i><span>Orders</span> <strong>(+58)</strong></a></li>
-        <li><a href="#" title=""><i class="icos-check"></i><span>Tasks</span> <strong>(+12)</strong></a></li>
-        <li class="has">
-          <a title="">
-            <i class="icos-money3"></i>
-            <span>Invoices</span>
-            <span><img src="/admin/images/elements/control/hasddArrow.png" alt="" /></span>
-          </a>
-          <ul>
-            <li><a href="#" title=""><span class="icos-add"></span>New invoice</a></li>
-            <li><a href="#" title=""><span class="icos-archive"></span>History</a></li>
-            <li><a href="#" title=""><span class="icos-printer"></span>Print invoices</a></li>
-          </ul>
-        </li>
-      </ul>
-      <div class="clear"></div>
+	  <!-- Left sidebar -->
+    <div class="sidebar" id="left-sidebar">
+
+      <% if content_for(:sidebar).blank? %>
+      <% else %>
+        <%= content_for :sidebar %>
+      <% end %>
+
     </div>
-  </div>
+    <!-- /left sidebar -->
     
-  <!-- Main content -->
-  <div class="wrapper">
     
-    <%= yield %>
-
-  </div>
-  <!-- Main content ends -->
-    
-</div>
-<!-- Content ends --> 
+    <!-- Main content -->
+    <div class="content">
       
-<span id="audio_span"></span> <!-- used to play audio inline -->
-        
+		  <%= flash_admin %>
+      <div class="outer">
+        <div class="inner">
+          <div class="page-header"><!-- Page header -->
+            <h5><%= content_for :content_title %></h5>
+            <!-- <ul class="icons">
+                <li><a href="#" class="hovertip" title="My tasks"><i class="font-tasks"></i></a></li>
+                <li><a href="#" class="hovertip" title="Reload data"><i class="font-refresh"></i></a></li>
+                <li><a href="#" class="hovertip" title="Settings"><i class="font-cog"></i></a></li>
+            </ul> -->
+
+          </div><!-- /page header -->
+          <div class="body">
+            <%= yield %>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!-- /main content -->
+
+    <% unless content_for(:sidebar_right).blank? %>
+      <!-- Right sidebar -->
+      <div class="sidebar" id="right-sidebar">
+        <div class="appendable">
+          <%= content_for :sidebar_right %>
+        </div>
+      </div>
+      <!-- /right sidebar -->
+    <% end %>
+    
+  </div>
+  <!-- /main wrapper -->
+
 </body>
 </html>
