--- a/cms/app/views/dm_cms/admin/cms_pages/_tree.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/_tree.html.erb
@@ -1,4 +1,5 @@
 <li class="tree_item"><%= link_to item.slug, :action => :show, :id => item %> : <%= link_to "New", new_page_admin_cms_page_path(item) %>
-  : <%= link_to "Up", move_up_admin_cms_page_path(item) %>
-  : <%= link_to "Dn", move_down_admin_cms_page_path(item) %>
+  : <%= link_to icons('font-arrow-up'), move_up_admin_cms_page_path(item) %>
+  : <%= link_to icons('font-arrow-down'), move_down_admin_cms_page_path(item) %>
+  <%= (sub_items.blank? ? '' : content_tag(:ul, nested_tree(sub_items))) %>
 </li>
