--- a/cms/app/views/dm_cms/admin/cms_contentitems/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_contentitems/_form.html.erb
@@ -6,70 +6,39 @@
 <%= simple_form_for @cms_contentitem, :url => submit_url do |f| %>
   <%= f.error_notification :message => "<p>Please review the problems below</p>"%>
   <%= content_frame :title => title, :toolbar => :languages do %>
-    <div class="tab_container">
-      <div id="tab_general" class="tab_content">
+    <div class="tab-content">
+      <div id="tab_general" class="tab-pane active fade in">
         <%= f.input :itemtype, :label => 'Item Type', :collection => CmsContentitem::CONTENT_TYPES %>
         <%= f.input :container, :label => 'Content Name', :hint => 'This is normally "body" or "sidebar" or something' %>
         <%= f.input :purpose, :label => 'Purpose', :hint => 'Short comment on type of content this is (optional)' %>
         <%= f.input :enable_cache, :as => :toggle, :label => 'Cache Content' %>
       </div>
       <% DmCore::Language.language_array.each do |locale| %>        
-        <div id="tab_<%= locale %>" class="tab_content">
-          <div class="formRow">
-            Content
-            <div class='grid12'>
-              <%= f.text_area "content_#{locale}", :class => 'monospaced' %>
-            </div>
-            <div class='clear'></div>
-          </div>
+        <div id="tab_<%= locale %>" class="tab-pane fade">
+          <%= f.input "content_#{locale}", :as => :text, :input_html => { :rows => 12, :class => 'input-block-level monospaced' } %>
         </div>
       <% end %>
+    </div>
     <%= submit_or_cancel :cancel_url => admin_cms_page_url(@current_page) %>
   <% end %>
 <% end %>
 
 <% content_for :sidebar do %>
-  <div style="margin-bottom:37px;">
-    <ul class="iconsLine ic1 etabs" style="margin-bottom: 10px;">
-      <li></li>
-    </ul>
-  </div>
-
-  <!-- Sidebar toggles -->
-  <div class="widget togglesGroup">
-    <div class="whead opened" id="toggleOpened"><h6>Tags &mdash; Images</h6><div class="clear"></div></div>
-    <div>
-      <table cellpadding="0" cellspacing="0" width="100%" class="tDefault sideTable monospaced">
-        <tbody>
-          <tr><td>{% photo img : 'image.jpg', url : http_url, caption : "caption text" %}</td></tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="whead closed"><h6>Tags &mdash; Lexicon</h6><div class="clear"></div></div>
-    <div>
-      <table cellpadding="0" cellspacing="0" width="100%" class="tDefault sideTable monospaced">
-        <tbody>
-          <tr><td>{% lex te:'sage', audio:no, class:tu %}</td></tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="whead closed"><h6>Tags &mdash; Boxes/Buttons</h6><div class="clear"></div></div>
-    <div>
-      <table cellpadding="0" cellspacing="0" width="100%" class="tDefault sideTable monospaced">
-        <tbody>
-          <tr><td>
-{% pullout width : 340, side : right %}<br>
-  stuff<br>
-{% endpullout %}<br>
-          </td></tr>
-          <tr><td>
-            {% continue_bar continue_text : 'Start', continue_url : 'alphabet-vowel-quiz', review_url : 'alphabet-introduction' %}
-          </td></tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
+  <ul class="side_list block">
+    <li><span class="contact-name"><strong>Tags &mdash; Images</strong>
+      <i class="monospaced">{% photo img : 'image.jpg', url : http_url, caption : "caption text" %}</i></span>
+    </li>
+    <li><span class="contact-name"><strong>Tags &mdash; Lexicon</strong>
+      <i class="monospaced">{% lex te:'sage', audio:no, class:tu %}</i></span>
+    </li>
+    <li><span class="contact-name"><strong>Tags &mdash; Boxes/Buttons</strong>
+      <i class="monospaced">{% pullout width : 340, side : right %}<br /><br />
+        stuff<br /><br />
+      {% endpullout %}</i></span>
+    </li>
+    <li>
+      <span class="contact-name"><i class="monospaced">{% continue_bar continue_text : 'Start', continue_url : 'alphabet-vowel-quiz', review_url : 'alphabet-introduction' %}</i></span>
+    </li>
+  </ul>
+  
 <% end %>
