--- a/core/app/views/layouts/admin/admin_page.html.erb
+++ b/core/app/views/layouts/admin/admin_page.html.erb
@@ -30,6 +30,7 @@
         <div class="inner">
           <div class="page-header"><!-- Page header -->
             <h5><%= content_for :content_title %></h5>
+            <%= content_for :content_title_extra %>
             <!-- <ul class="icons">
                 <li><a href="#" class="hovertip" title="My tasks"><i class="font-tasks"></i></a></li>
                 <li><a href="#" class="hovertip" title="Reload data"><i class="font-refresh"></i></a></li>
