--- a/cms/app/views/dm_cms/admin/cms_pages/_content_toolbar.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/_content_toolbar.html.erb
@@ -1,6 +1,10 @@
-<ul class="nav pull-right">
-  <li><%= link_to icons('font-arrow-up'), move_up_admin_cms_contentitem_path(contentitem), :title => "Move content up" %></li>
-  <li><%= link_to icons('font-arrow-down'), move_down_admin_cms_contentitem_path(contentitem), :title => "Move content down" %></li>
-  <li><%= link_to icon_label('icon-edit', 'Edit'), edit_admin_cms_contentitem_path(contentitem) %></li>
-  <li><%= link_to icon_label('icon-trash', 'Delete'), admin_cms_contentitem_path(contentitem), :method => :delete, :confirm => 'Are you sure you wish to delete with item?' %></li>
-</ul> 
+<%
+  list = []
+  if @current_page.cms_contentitems.count > 1
+    list << link_to(icons('font-arrow-up'), move_up_admin_cms_contentitem_path(contentitem), :title => "Move content up")
+    list << link_to(icons('font-arrow-down'), move_down_admin_cms_contentitem_path(contentitem), :title => "Move content down")
+  end
+  list << link_to(icon_label('icon-edit', 'Edit'), [:edit, :admin, contentitem], :class => "nav-btn-primary")
+  list << link_to(icon_label('icon-trash', 'Delete'), [:admin, contentitem], :method => :delete, :class => "nav-btn-danger", :confirm => 'Are you sure you wish to delete this item?')
+%>
+<%= nav_bar_items( list ) %>
