include admin.css in admin template

--- a/app/views/layouts/admin/_page_header.html.erb
+++ b/app/views/layouts/admin/_page_header.html.erb
@@ -7,8 +7,9 @@
 
   <link href="<%= admin_theme_path %>css/main.css" rel="stylesheet" type="text/css" />
   <link href="<%= admin_theme_path %>_custom/admin_theme_overrides.css" rel="stylesheet" type="text/css" />
+  <%= stylesheet_link_tag 'admin' %>
+  
   <!-- <link href="<%= admin_theme_path %>css/bootstrap.css" rel="stylesheet" type="text/css" /> -->
-  <!-- <%= stylesheet_link_tag 'admin' %> -->
   <!--[if IE]> <link href="<%= admin_theme_path %>css/ie.css" rel="stylesheet" type="text/css"> <![endif]-->
 
   <%= javascript_include_tag 'admin' %>
