set content area to full width of form for easier editing

--- a/cms/app/views/dm_cms/admin/cms_contentitems/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_contentitems/_form.html.erb
@@ -14,7 +14,10 @@
       </div>
       <% DmCore::Language.language_array.each do |locale| %>        
         <div id="tab_<%= locale %>" class="tab-pane fade">
-          <%= f.input "content_#{locale}", :as => :text, :input_html => { :rows => 12, :class => 'input-block-level monospaced' } %>
+          <div class="control-group">
+            <%= f.label "content_#{locale}", 'Content', :class => "text control-label" %>
+            <%= f.text_area "content_#{locale}", :class => "text input-block-level monospaced", :rows => 24 %>
+          </div>
         </div>
       <% end %>
     </div>
