--- a/app/views/dm_core/admin/accounts/show.html.erb
+++ b/app/views/dm_core/admin/accounts/show.html.erb
@@ -20,7 +20,9 @@
       <dt>Site Title</dt>
       <dd><%= @account.preferred_site_title.to_s_default %></dd>
       <dt>Default Locale</dt>
-      <dd><%= @account.preferred_site_default_locale %></dd>
+      <dd><%= @account.preferred_default_locale %></dd>
+      <dt>Supported Locales</dt>
+      <dd><%= @account.preferred_locales %></dd>
       <dt>Webmaster Email</dt>
       <dd><%= @account.preferred_webmaster_email.to_s_default %></dd>
       <dt>Support Email</dt>
@@ -30,7 +32,7 @@
       <dt>MailChimp API Key</dt>
       <dd><%= @account.preferred_mailchimp_api_key.to_s_default %></dd>
       <dt>SSL Enabled?</dt>
-      <dd><div class="checkbox on_off inline"><input type="checkbox" <%= 'checked="1"' if @account.preferred_site_ssl_enabled %> disabled="disabled" /></div></dd>
+      <dd><div class="checkbox on_off inline"><input type="checkbox" <%= 'checked="1"' if @account.preferred_ssl_enabled %> disabled="disabled" /></div></dd>
     </dl>
   <% end %>
 </div>
