--- a/cms/app/views/dm_cms/admin/cms_pages/show.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :secondary_title, "#{@current_page.slug} &mdash; #{@current_page.title}".html_safe %>
 <ul class="midnav midnav-font">
   <li><%= link_to "#{icons('font-plus')}<span>Add Content</span>".html_safe, new_content_admin_cms_contentitem_path(@current_page), :title => 'Add Content' %></li>
-  <li><%= link_to "#{icons('font-search')}<span>View Page</span>".html_safe, url_for("/#{DmCore.config.default_locale}/#{@current_page.slug}"), :title => 'View Page', :target => '_blank' %></li>
+  <li><%= link_to "#{icons('font-search')}<span>View Page</span>".html_safe, url_for("/#{current_account.preferred_default_locale}/#{@current_page.slug}"), :title => 'View Page', :target => '_blank' %></li>
   <li><%= link_to "#{icons('font-trash')}<span>Delete Page</span>".html_safe, admin_cms_page_path(@current_page), :method => :delete, :title => 'Delete Page', :confirm => "Are you sure you wish to delete this page?" %></li>
 </ul>
 
@@ -13,7 +13,7 @@
         <tbody>
           <tr>
             <td><em><%= item.itemtype %></em></td>
-            <td class="monospaced"><%= truncate(item.content, :length => 500) %></td>
+            <td class="monospaced"><pre><%= truncate(item.send("content_#{current_account.preferred_default_locale}"), :length => 500) %></pre></td>
           </tr>
         </tbody>
       </table>    
