--- a/cms/app/views/dm_cms/admin/cms_pages/index.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/index.html.erb
@@ -1,18 +1,8 @@
 <%= render :partial => 'index_sidebar' %>
 
 <div class="block well">
-  <div class="table-overflow">
-    <table id="drag_sort" class="table table-striped table-bordered table-block" data-update_url="<%#= dm_lms.admin_course_sort_path %>">
-  		<thead>
-  		  <tr>
-  		    <th>Title</th>
-  		    <th width="50">Status</th>
-  		    <th width="100">Actions</th>
-  		  </tr>
-  		</thead>
-  		<tbody>
-        <%= nested_tree(@tree) %>
-  		</tbody>
-  	</table>
-  </div>
+  <ul id="tree_sort" data-update_url="<%= dm_cms.admin_cms_page_sort_path %>">
+    <%= nested_tree(@tree) %>
+  </ul>
 </div>
+
