--- a/cms/app/views/dm_cms/admin/cms_pages/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/_form.html.erb
@@ -8,13 +8,23 @@
   
     <div class="tab-content">
       <div id="tab_general" class="tab-pane active fade in">
-        <%= f.input :slug, :label => 'Page Slug', :hint => 'Name page will be known by' %>
-        <%= f.input :pagetype, :label => 'Page Type', :collection => CmsPage::PAGETYPE %>
         <%= f.input :published, :as => :toggle, :label => 'Publish It?' %>
-        <%= f.input :template, :label => 'Template to Use' %>
-        <%= f.input :link %>
-        <%= f.input :menuimage, :label => 'Menu Image' %>
-        <%= f.input :requires_login, :as => :toggle, :label => 'Requires Login' %>
+        <%= f.input :slug, :label => 'Page Slug', :hint => 'Name page will be known by - must be unique' %>
+        <%= f.input :pagetype, :label => 'Page Type', :collection => CmsPage::PAGETYPE, :include_blank => false %>
+        <div id="pagetype_link">
+          <%= f.input :link %>
+        </div>
+        <% templates = template_menu_list %>
+        <% if templates %>
+          <%= f.input :template, :label => 'Template to Use', :collection => templates, :include_blank => false,
+                  :hint => 'Template to use for this page. Child pages can inherit this template' %>
+        <% else %>
+          <%= f.input :template, :label => 'Template to Use', :hint => "Leave blank to inherit the parent's template" %>
+        <% end %>
+        <% if false #--- disable this for now %>
+          <%= f.input :menuimage, :label => 'Menu Image' %>
+        <% end %>
+        <%= f.input :requires_login, :as => :toggle, :label => 'Requires Login', :hint => 'Page will require user to be logged in to access' %>
       </div>
       <% current_account.site_locales.each do |locale| %>        
         <div id="tab_<%= locale %>" class="tab-pane fade">
